# blueos-docker

./: .gitattributes  Pipfile
.github/workflows/: deploy.yml  deploy_native.yml  test-and-deploy.yml
bootstrap/: startup.json.default
core/: Dockerfile  Pipfile  entrypoint.sh  start-blueos-core  start-companion-core  supervisord.conf
core/bluesim-x86/: BlueSim.sh  BlueSim.x86_64  test_rtsp.sh  test_udp.sh
core/frontend/: package.json  server.js  vite.config.js
core/frontend/src/: App.vue  menus.ts
core/libs/: install-libs.sh
core/services/: install-services.sh  install_dependencies.py
core/services/ardupilot_manager/: ArduPilotManager.py  autopilot_manager.py  main.py  settings.py  setup.py  typedefs.py
core/services/bag_of_holding/: main.py  pyproject.toml
core/services/beacon/: main.py
core/services/bridget/: main.py
core/services/cable_guy/: networksetup.py  typedefs.py
core/services/helper/: main.py  setup.py
core/services/kraken/: extension.py  kraken.py  main.py  settings.py  setup.py
core/services/mavftp/: main.py  mavftp.py  setup.py
core/services/pardal/: setup.py
core/services/ping/: ping1d_driver.py
core/services/versionchooser/: setup.py
core/services/wifi/: main.py  typedefs.py
core/settings/: bag-of-holding  camera-settings.json
core/tools/: install-static-binaries.sh  install-system-tools.sh
core/tools/blueos_startup_update/: blueos_startup_update.py
core/tools/nginx/: cert.pem  (+2 more)
deploy/pimod/: blueos.Pifile
install/: install.sh
install/boards/: bcm_27xx.sh  configure_board.sh
install/network/: avahi.sh
(+66 files in other folders)
