[project]
name = "bag_of_holding"
version = "0.1.0"
description = "Allow the persistence of arbitrary data in a Blue Robotics BlueOS system."
requires-python = ">=3.11"
dependencies = [
    "appdirs==1.4.4",
    "commonwealth==0.1.0",
    "dpath==2.1.5",
    "loguru==0.5.3",
    "robyn==0.60.0"
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
